--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_tabs.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_tabs.html
@@ -49,6 +49,9 @@
             {% trans "Sbsysscanner" %}
         </a>
         {% endif %}
+        <a id="msteams" class="tabs__control" href="/msteamsscanners/">
+            {% trans "Microsoft Teams Scanner" %}
+        </a>
     </div>
 </div>
         {% endif %}
@@ -78,14 +81,14 @@
     var googledrive = document.getElementById("googledrive")
     var gmail = document.getElementById("gmail")
     var sbsys = document.getElementById("sbsys")
+    var msteams = document.getElementById("msteams")
 
     if (location.pathname === '/') {
         if (web) {
             window.location.href = "/webscanners/"
             web.classList.add('active')
         } else if (file) {
-            window.location.href = "/filescanners/"
-            file.classList.add('active')
+            window.location.href = "/filescanners/" file.classList.add('active')
         } else if (exchange) {
             window.location.href = "/exchangescanners/"
             exchange.classList.add('active')
@@ -107,7 +110,10 @@
         } else if (sbsys) {
             window.location.href = "/sbsysscanners/"
             sbsys.classList.add('active')
-        }
+        } else if (msteams) {
+	    window.location.href = "/msteamsscanners/"
+	    msteams.classList.add('active')
+	}
     }
     if (location.pathname === '/webscanners/') {
         web.classList.add('active')
@@ -135,6 +141,9 @@
     }
     if (location.pathname === '/sbsysscanners/') {
         sbsys.classList.add("active")
+    }
+    if (location.pathname === '/msteamsscanners/') {
+	msteams.classList.add("active")
     }
 
 
