[#42385] Implemented View for MS Teams.

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_askrun.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_askrun.html
@@ -58,6 +58,10 @@
       <a href="/msgraph-calendarscanners/{{msgraphcalendarscanner.pk}}/run/" class="button button--cta button--large run-scan-button">
         {% trans "Let's go!" %}
       </a>
+      {% elif msgraphteamsscanner.pk %}
+      <a href="/msgraph-teamsscanners/{{msgraphteamsscanner.pk}}/run/" class="button button--cta button--large">
+        {% trans "Let's go!" %}
+      </a>
       {% elif googledrivescanner.pk %}
       <a href="/googledrivescanners/{{googledrivescanner.pk}}/run/" class="button button--cta button--large run-scan-button">
         {% trans "Let's go!" %}
