--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
@@ -603,6 +603,31 @@
     </section>
     {% endif %}
 
+    {% if form.org_unit and not form.userlist %}
+	<section class="data-form">
+	    <fieldset class="form__fieldset">
+		<h3 class="required-form">
+		    {% trans "add users"|capfirst %}
+		</h3>
+
+		{% if request.user.is_superuser or FEATURES.IMPORT_SERVICES in client.enabled_features and FEATURES.ORG_STRUCTURE in client.enabled_features %}
+		    <p class="information">{% trans "select users from"|capfirst %}</p>
+		    <div class="form__group {% if form.org_unit.errors %} has-error{% endif %}">
+			<label
+			    class="treeview-label
+				   {% if required %}required-form{% endif %}"
+			    for="{{ form.org_unit.name }}">
+			    {% trans "organizational units"|capfirst %}
+			</label>
+			<select class="treeview" id="sel_1" name="{{ form.org_unit.name }}" multiple size="10" url="{% url 'org-units-listing' %}">
+			</select>
+			{% if form.org_unit.errors %}{{ form.org_unit.errors }}{% endif %}
+		    </div>
+		{% endif %}
+	    </fieldset> 
+	</section>
+    {% endif %}
+
 
     <section class="data-form">
         <fieldset class="form__fieldset">
