[#49641] WIP: Force a user to change password.

--- a/src/os2datascanner/projects/report/reportapp/templates/password_change.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/password_change.html
@@ -16,11 +16,17 @@
         {% trans "Change password" %}
       </h2>
       <fieldset>
-        <div class="form__group{% if form.old_password.errors %} has-error{% endif %}">
-          <label for="id_{{ form.old_password.name }}">{{ form.old_password.label }}</label>
-          <input type="password" name="{{ form.old_password.name }}" id="id_{{ form.old_password.name }}" autofocus {% if form.old_password.value %}value="{{ form.old_password.value }}"{% endif %}>
-          <label>{% if form.old_password.errors %}{{ form.old_password.errors }}{% endif %}</label>
-        </div>
+	  {% if not user.last_login %}
+	      <div>
+		  <p>{% trans "Before you can continue, you must choose a new password for your OS2datascanner account." %}</p>
+	      </div>
+	  {% else %}
+              <div class="form__group{% if form.old_password.errors %} has-error{% endif %}">
+		  <label for="id_{{ form.old_password.name }}">{{ form.old_password.label }}</label>
+		  <input type="password" name="{{ form.old_password.name }}" id="id_{{ form.old_password.name }}" autofocus {% if form.old_password.value %}value="{{ form.old_password.value }}"{% endif %}>
+		  <label>{% if form.old_password.errors %}{{ form.old_password.errors }}{% endif %}</label>
+              </div>
+	  {% endif %}
 
         <div class="form__group{% if form.new_password1.errors %} has-error{% endif %}">
           <label for="id_{{ form.new_password1.name }}">{{ form.new_password1.label }}</label>
