--- a/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
@@ -8,13 +8,11 @@
   function checkedBox() {
     var checkbox = document.getElementById('30-days-toggle');
     var thirtyDays = document.getElementById('30-days');
-    console.log(thirtyDays.value)
     if (checkbox.checked) {
       thirtyDays.value = 'true';
     } else {
       thirtyDays.value = 'false';
     }
-    console.log(thirtyDays.value)
   };
 </script>
 
@@ -101,8 +99,8 @@
     <div class="checkbox-group">
       <div class="ds-checkbox">
         <input type="checkbox" id="30-days-toggle"
-        hx-get="" hx-trigger="click delay:1s" hx-target=".content" hx-swap="innerHTML"
-        onclick="checkedBox()"
+        hx-get="" hx-trigger="click" hx-target=".content" hx-swap="innerHTML"
+        onclick="checkedBox()" value="toggle"
         {% if 30_days == "true" %}checked{% endif %}>
         <label for="30-days-toggle">
           {% trans "Include results, that are less than 30 days old" %}
