--- a/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
@@ -8,6 +8,7 @@
   function checkedBox() {
     var checkbox = document.getElementById('30-days-toggle');
     var thirtyDays = document.getElementById('30-days');
+    console.log(checkbox.checked)
     if (checkbox.checked) {
       thirtyDays.value = 'true';
     } else {
@@ -25,11 +26,12 @@
   <input type="hidden" name="paginate_by" id="paginate_by" value="{{ paginate_by }}">
   <input type="hidden" name="order_by" id="order_by" value="{{ order_by }}">
   <input type="hidden" name="order" id="order" value="{{ order }}">
+  <input type="hidden" name="30-days" id="30-days" value="{{ 30_days }}">
 
   <div class="match_filtering_wrapper">
       <div>
           <button type="button" onclick="clear_filter('scannerjobs')" class="match_filtering_clear_button"
-                  hx-get="" hx-trigger="click" hx-target=".content" hx-swap="innerHTML">
+                  hx-get="" hx-trigger="click" hx-target=".content" hx-swap="innerHTML" hx-include="#filter_form">
             {% trans "Clear" %}
           </button>
           <label for="scannerjobs" class="match_filtering_label">
@@ -38,7 +40,7 @@
       </div>
       <div class="match_filtering dropdown">
           <select name="scannerjob" id="scannerjobs" data-autosubmit data-compareto="all"
-                  hx-get="" hx-trigger="click changed" hx-target=".content" hx-swap="innerHTML">
+                  hx-get="" hx-trigger="click changed" hx-target=".content" hx-swap="innerHTML" hx-include="#filter_form">
             <option value="all"
                     {% if scannerjobs|last == "all" %}
                         selected="selected"
@@ -60,7 +62,7 @@
   <div class="match_filtering_wrapper">
       <div>
           <button type="button" onclick="clear_filter('sensitivities')" class="match_filtering_clear_button"
-                  hx-get="" hx-trigger="click" hx-target=".content" hx-swap="innerHTML">
+                  hx-get="" hx-trigger="click" hx-target=".content" hx-swap="innerHTML" hx-include="#filter_form">
             {% trans "Clear" %}
           </button>
           <label for="sensitivities" class="match_filtering_label">
@@ -69,7 +71,7 @@
       </div>
       <div class="match_filtering dropdown">
           <select name="sensitivities" id="sensitivities" data-autosubmit data-compareto="all"
-                  hx-get="" hx-trigger="click changed" hx-target=".content" hx-swap="innerHTML">
+                  hx-get="" hx-trigger="click changed" hx-target=".content" hx-swap="innerHTML" hx-include="#filter_form">
             <option value="all"
                     {% if sensitivities|last == "all" %}
                         selected="selected"
@@ -94,16 +96,16 @@
       If we used the checkbox, unticking it would make it disappear from the form's GET action
   {% endcomment %}
 
-  <input type="hidden" name="30-days" id="30-days" value="{{ 30_days }}">
   <div class="checkbox_wrapper">
     <div class="checkbox-group">
       <div class="ds-checkbox">
         <input type="checkbox" id="30-days-toggle"
-        hx-get="" hx-trigger="click" hx-target=".content" hx-swap="innerHTML"
-        onclick="checkedBox()" value="toggle"
-        {% if 30_days == "true" %}checked{% endif %}>
+           hx-trigger="click" hx-get="" hx-target=".content" hx-swap="innerHTML" hx-include="#filter_form"
+           name="30-days-toggle" value="true"
+        {% if 30_days == "true" or not 30_days %}checked{% endif %}>
         <label for="30-days-toggle">
           {% trans "Include results, that are less than 30 days old" %}
+          
         </label>
       </div>
     </div>
