Existance is pain.

--- a/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
@@ -27,6 +27,7 @@
   <input type="hidden" name="order_by" id="order_by" value="{{ order_by }}">
   <input type="hidden" name="order" id="order" value="{{ order }}">
   <input type="hidden" name="30-days" id="30-days" value="{{ 30_days }}">
+  <input type="hidden" name="page" id="page" value="{{ page_obj.number }}">
 
   <div class="match_filtering_wrapper">
       <div>
