--- a/src/os2datascanner/projects/report/reportapp/templates/components/pagination.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/pagination.html
@@ -6,10 +6,22 @@
   <tr>
     <td colspan="6">
       <div class="flex">
+           
         <span class="page_of_pages">
           {% trans "page" %} {{ page_obj.number }} {% trans "of" %} {{ paginator.num_pages }}
         </span>
         {% if is_paginated %}
+        
+        <form action="" class="flex" id="page-search">
+
+          <input type="hidden" name="paginate_by" id="paginate_by" value="{{ paginate_by }}">
+          <input type="hidden" name="order_by" id="order_by" value="{{ order_by }}">
+          <input type="hidden" name="order" id="order" value="{{ order }}">
+          <input type="hidden" name="scannerjob" id="scannerjob" value="{{ scannerjobs|last }}">
+          <input type="hidden" name="sensitivities" id="sensitivities" value="{{ sensitivities|last }}">
+          <input type="hidden" name="30-days" id="30-days" value="{{ 30_days }}">
+          <input type="hidden" name="30-days-toggle" id="30-days-toggle" value="{{ 30_days }}">
+
         <div class="pages">
           {% if page_obj.previous_page_number != 0 %}
             <a class="link link--pre flex" href="?{% param_replace page=page_obj.previous_page_number %}">
@@ -59,12 +71,14 @@
           </a>
           {% endif %}
         </div>
-        <form action="" class="flex">
+        
+
           <label for="page">
             {% trans "Go to page" %}
           </label>
           <input id="page" type="number" name="page" min="1" max="{{ paginator.num_pages|unlocalize }}" onkeyup=imposeMinMax(this)>
-          <button class="button button--submit" type="submit" id="form-button">
+          <button class="button button--submit" type="submit" id="form-button"
+                  hx-get="" hx-trigger="click" hx-swap="innerHTML" hx-target=".content" hx-include="#page-search">
             {% trans "Go" %}
           </button>
         </form>
