--- a/src/os2datascanner/projects/report/reportapp/templates/components/load-results.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/load-results.html
@@ -8,8 +8,8 @@
   
   <input type="hidden" name="order_by" id="order_by" value="{{ order_by }}">
   <input type="hidden" name="order" id="order" value="{{ order }}">
-  <input type="hidden" name="scannerjob" id="scannerjob" value="{{ scannerjobs|last }}">
-  <input type="hidden" name="sensitivities" id="sensitivities" value="{{ sensitivities|last }}">
+  {% comment %} <input type="hidden" name="scannerjob" id="scannerjob" value="{{ scannerjobs|last }}">
+  <input type="hidden" name="sensitivities" id="sensitivities" value="{{ sensitivities|last }}"> {% endcomment %}
   <input type="hidden" name="30-days" id="30-days" value="{{ 30_days }}">
   <input type="hidden" name="30-days-toggle" id="30-days-toggle" value="{{ 30_days }}">
   <input type="hidden" name="page" id="page" value="{{ page_obj.number }}">
