--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form_select_option_field.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form_select_option_field.html
@@ -8,7 +8,7 @@
       <select
         name="{{ field.name }}"
         id="id_{{ field.name }}"
-        {% if field.field.choices|length <= 1 %} disabled="disabled" {% endif %}>
+        {% if field.field.choices|length <= 1 %} disabled="disabled" required="false" {% endif %}>
 
         {% for value, tag in field.field.choices %}
         <option
@@ -18,6 +18,9 @@
           {% endif %}>
           {{ tag }}
         </option>
+        {% if field.field.choices|length <= 1 %}
+        <input type= "hidden" name="{{ field.name }}" value="{{ value }}">
+        {% endif %}
         {% endfor %}
       </select>
     </div>
