--- a/src/os2datascanner/projects/report/reportapp/templates/index.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/index.html
@@ -8,7 +8,7 @@
     <main class="wrapper">
       {% include "partials/sidemenu.html" with active_tab="home" %}
 
-      <div class="content">
+      <div class="content" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
         {% include "content.html" %}
 
