--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -19,6 +19,37 @@
   margin-top: 1rem;
 }
 
+.search_field_wrapper {
+  position: absolute;
+  top: -11rem;
+  right: -2rem;
+  z-index: 300;
+  float: left;
+  clear: left;
+  max-width: 100%;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+
+  input[type=search] {
+    background-color: #fff;
+    border: none;
+    border-radius: var(--border-radius-small);
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    line-height: 1;
+    outline: none;
+    padding: .75rem;
+    transition: var(--transition-default);
+    width: 75%;
+  }
+
+  button {
+    border-radius: 1.5rem;
+    margin-left: 0.25rem;
+    padding: 0.75rem 1rem;
+  }
+}
+
 .match_filtering_clear_button {
   cursor: pointer;
   float: right;
